--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,14 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.info.ui.InfoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back_button"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/car_image"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
+        android:contentDescription="@string/car_image"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_car"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_button" />
+
+    <TextView
+        android:id="@+id/brand_name"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/brand_name"
+        app:layout_constraintStart_toStartOf="@id/car_image"
+        app:layout_constraintTop_toBottomOf="@+id/car_image" />
+
+    <TextView
+        android:id="@+id/model_name"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/model_name"
+        app:layout_constraintStart_toStartOf="@id/car_image"
+        app:layout_constraintTop_toBottomOf="@+id/brand_name" />
+
+    <TextView
+        android:id="@+id/year_text"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/year"
+        app:layout_constraintStart_toStartOf="@id/car_image"
+        app:layout_constraintTop_toBottomOf="@+id/model_name" />
+
+    <TextView
+        android:id="@+id/engine_text"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/engine"
+        app:layout_constraintStart_toStartOf="@id/car_image"
+        app:layout_constraintTop_toBottomOf="@+id/year_text" />
+
+    <TextView
+        android:id="@+id/transmission_text"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="6dp"
+        android:text="@string/transmission"
+        app:layout_constraintStart_toStartOf="@id/car_image"
+        app:layout_constraintTop_toBottomOf="@+id/engine_text" />
+
+    <ImageView
+        android:id="@+id/avatar_image"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="50dp"
+        android:contentDescription="@string/account_image"
+        android:src="@drawable/ic_acc_image"
+        app:layout_constraintBottom_toBottomOf="@+id/transmission_text"
+        app:layout_constraintEnd_toEndOf="@id/car_image"
+        app:layout_constraintTop_toTopOf="@+id/brand_name" />
+
+    <TextView
+        android:id="@+id/account_name"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
+        android:text="@string/account_name"
+        app:layout_constraintEnd_toEndOf="@+id/avatar_image"
+        app:layout_constraintStart_toStartOf="@+id/avatar_image"
+        app:layout_constraintTop_toBottomOf="@+id/avatar_image" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/posts_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintEnd_toEndOf="@+id/car_image"
+        app:layout_constraintStart_toStartOf="@+id/car_image"
+        app:layout_constraintTop_toBottomOf="@id/transmission_text"
+        app:spanCount="2" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
