--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/back_button" />
 
     <TextView
-        android:id="@+id/brand_name"
+        android:id="@+id/car_info"
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_marginTop="12dp"
@@ -47,7 +47,7 @@
         android:layout_marginTop="6dp"
         android:text="@string/model_name"
         app:layout_constraintStart_toStartOf="@id/car_image"
-        app:layout_constraintTop_toBottomOf="@+id/brand_name" />
+        app:layout_constraintTop_toBottomOf="@+id/car_info" />
 
     <TextView
         android:id="@+id/year_text"
@@ -85,7 +85,7 @@
         android:src="@drawable/ic_acc_image"
         app:layout_constraintBottom_toBottomOf="@+id/transmission_text"
         app:layout_constraintEnd_toEndOf="@id/car_image"
-        app:layout_constraintTop_toTopOf="@+id/brand_name" />
+        app:layout_constraintTop_toTopOf="@+id/car_info" />
 
     <TextView
         android:id="@+id/account_name"
