--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -10,8 +10,8 @@
         android:id="@+id/back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="@dimen/back_button_margin"
+        android:layout_marginTop="@dimen/back_button_margin"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/back_button"
         android:src="@drawable/ic_arrow_back"
@@ -21,39 +21,42 @@
     <ImageView
         android:id="@+id/car_image"
         android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/back_button_margin"
+        android:layout_marginTop="@dimen/back_button_margin"
         android:contentDescription="@string/car_image"
-        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="h,3:2"
         android:src="@drawable/ic_car"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_button" />
 
+
     <TextView
-        android:id="@+id/car_info"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/brand_name"
+        android:id="@+id/brand_name"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/title_height"
+        android:layout_marginTop="@dimen/title_top_margin"
+        android:textStyle="bold"
+        android:text="@string/default_text"
         app:layout_constraintStart_toStartOf="@id/car_image"
         app:layout_constraintTop_toBottomOf="@+id/car_image" />
 
     <TextView
         android:id="@+id/model_name"
-        android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="6dp"
-        android:text="@string/model_name"
-        app:layout_constraintStart_toStartOf="@id/car_image"
-        app:layout_constraintTop_toBottomOf="@+id/car_info" />
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/title_height"
+        android:layout_marginStart="@dimen/title_space"
+        android:text="@string/default_text"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/brand_name"
+        app:layout_constraintTop_toTopOf="@+id/brand_name" />
 
     <TextView
         android:id="@+id/year_text"
         android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="6dp"
+        android:layout_height="@dimen/title_height"
+        android:layout_marginTop="@dimen/title_space"
         android:text="@string/year"
         app:layout_constraintStart_toStartOf="@id/car_image"
         app:layout_constraintTop_toBottomOf="@+id/model_name" />
@@ -61,8 +64,8 @@
     <TextView
         android:id="@+id/engine_text"
         android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="6dp"
+        android:layout_height="@dimen/title_height"
+        android:layout_marginTop="@dimen/title_space"
         android:text="@string/engine"
         app:layout_constraintStart_toStartOf="@id/car_image"
         app:layout_constraintTop_toBottomOf="@+id/year_text" />
@@ -70,28 +73,29 @@
     <TextView
         android:id="@+id/transmission_text"
         android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="6dp"
+        android:layout_height="@dimen/title_height"
+        android:layout_marginTop="@dimen/title_space"
         android:text="@string/transmission"
         app:layout_constraintStart_toStartOf="@id/car_image"
         app:layout_constraintTop_toBottomOf="@+id/engine_text" />
 
     <ImageView
         android:id="@+id/avatar_image"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="50dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
+        android:layout_marginEnd="@dimen/avatar_margin"
         android:contentDescription="@string/account_image"
         android:src="@drawable/ic_acc_image"
         app:layout_constraintBottom_toBottomOf="@+id/transmission_text"
         app:layout_constraintEnd_toEndOf="@id/car_image"
-        app:layout_constraintTop_toTopOf="@+id/car_info" />
+        app:layout_constraintTop_toTopOf="@+id/brand_name" />
 
     <TextView
         android:id="@+id/account_name"
         android:layout_width="0dp"
-        android:layout_height="20dp"
+        android:layout_height="@dimen/title_height"
         android:text="@string/account_name"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/avatar_image"
         app:layout_constraintStart_toStartOf="@+id/avatar_image"
         app:layout_constraintTop_toBottomOf="@+id/avatar_image" />
@@ -100,11 +104,42 @@
         android:id="@+id/posts_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/back_button_margin"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/car_image"
         app:layout_constraintStart_toStartOf="@+id/car_image"
         app:layout_constraintTop_toBottomOf="@id/transmission_text"
         app:spanCount="2" />
+
+    <ProgressBar
+        android:id="@+id/info_progress_bar"
+        android:layout_width="@dimen/progress_bar_side_size"
+        android:layout_height="@dimen/progress_bar_side_size"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/posts_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+
+    <ProgressBar
+        android:id="@+id/posts_progress_bar"
+        android:layout_width="@dimen/progress_bar_side_size"
+        android:layout_height="@dimen/progress_bar_side_size"
+        android:layout_marginBottom="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/posts_recycler_view" />
+
+    <TextView
+        android:id="@+id/error_message"
+        android:text="@string/something_went_wrong"
+        android:textSize="@dimen/error_text_size"
+        android:gravity="center"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
