--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/post_constraint_layout"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="160dp"
+    android:layout_height="160dp"
     android:padding="5dp">
 
     <com.google.android.material.card.MaterialCardView
@@ -23,7 +23,7 @@
             <ImageView
                 android:id="@+id/car_image"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="@dimen/post_image_side_size"
                 android:contentDescription="@string/car_image"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_car"
@@ -34,10 +34,11 @@
                 android:id="@+id/post_text"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/text_margin"
                 android:ellipsize="end"
-                android:lines="3"
-                android:paddingHorizontal="4dp"
+                android:lines="2"
+                android:textSize="@dimen/post_text_size"
+                android:paddingHorizontal="@dimen/text_margin"
                 android:text="@string/default_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/car_image" />
@@ -58,8 +59,8 @@
                 android:id="@+id/number_of_likes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:textSize="12sp"
+                android:layout_marginStart="@dimen/text_margin"
+                android:textSize="@dimen/like_count_text_size"
                 app:layout_constraintBottom_toBottomOf="@+id/like_image"
                 app:layout_constraintStart_toEndOf="@id/like_image"
                 app:layout_constraintTop_toTopOf="@id/like_image"
@@ -81,8 +82,8 @@
                 android:id="@+id/number_of_comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:textSize="12sp"
+                android:layout_marginStart="@dimen/text_margin"
+                android:textSize="@dimen/like_count_text_size"
                 app:layout_constraintBottom_toBottomOf="@+id/comments_image"
                 app:layout_constraintStart_toEndOf="@id/comments_image"
                 app:layout_constraintTop_toTopOf="@id/comments_image"
