--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#2196F3</color>
     <color name="orange">#FF9800</color>
 
+    <color name="ic_launcher_2_background">#FFFFFF</color>
 </resources>
